# vcf-explorer

./: .gitignore  Dockerfile  README.md  Snakefile  docker-compose.yml  docker.sh  pyproject.toml  run.sh  setup.sh  test.sh
api/: Dockerfile  annotate.py  fill_db.py  pyproject.toml  run.sh  serve.py
api/src/: __init__.py  async_variant.py
api/tests/: test_api.py
frontend/: pyproject.toml
src/: annotate.py
src/annotate/: __init__.py  async_myvariant.py
src/api/: Dockerfile  README.md  Snakefile  pyproject.toml  run.sh  serve.py  test_serve.py
src/api/annotate/: annotate.py  async_myvariant.py
src/api/api/: serve.py  test_serve.py
src/frontend/: Dockerfile  README.md  frontend.py  pyproject.toml
